--- a/lib/mocks/browse.yml
+++ b/lib/mocks/browse.yml
@@ -5,7 +5,6 @@ source:
   service: sac
   namespace: claim-semaphore
   method: browse
-  resolve: false
 fields:
   - name: asdasd
     component: StatusChip
@@ -18,3 +17,20 @@ fields:
     attributes:
       sortable: true
       isDefaultSort: true
+  - name: asd
+    component: Icon
+    componentAttributes:
+      color: 56s
+      icon: test
+  - name: sadasd
+    component: BadgeLetter
+  - name: sadasdsad
+    component: FieldList
+    componentAttributes:
+      fields:
+        - name: test
+          component: Icon
+          componentAttributes:
+            color: 45
+  - name: asd
+    component: Text
