--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "ajv": "^6.10.2",
     "fs-extra": "^8.1.0",
+    "mock-fs": "^4.10.1",
     "yamljs": "^0.3.0",
     "yargs": "^13.3.0"
   }
