--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -58,3 +58,55 @@ sections:
               value: 1
             - label: common.status.inactive
               value: 0
+- name: semaphoreBrowse
+  rootComponent: BrowseSection
+  source:
+    service: sac
+    namespace: claim-semaphore
+    method: browse
+  fields:
+    - name: id
+      component: BoldText
+      attributes:
+        sortable: true
+        isDefaultSort: true
+      mapper: addHashtag
+    - name: color
+      component: Text
+    - name: name
+      component: MediumText
+    - name: rangeLow
+      component: Chip
+    - name: rangeHigh
+      component: Chip
+    - name: alerts
+      component: Chip
+      attributes:
+        sortable: true
+      mapper: booleanToWord
+      filter:
+        component: Select
+        componentAttributes:
+          translateLabels: true
+          options:
+            - label: common.boolean.yes
+              value: 1
+            - label: common.boolean.no
+              value: 0
+    - name: status
+      component: StatusChip
+      attributes:
+        isStatus: true
+        sortable: true
+      componentAttributes:
+        colorSource: statusColor
+      mapper: translate
+      filter:
+        component: Select
+        componentAttributes:
+          translateLabels: true
+          options:
+            - label: common.status.active
+              value: 1
+            - label: common.status.inactive
+              value: 0
