--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@janiscommerce/view-schema-validator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/janis-commerce/view-schema-validator.git"
+  },
+  "bin": {
+    "view-schema-validator": "index.js"
   },
   "author": "Janis",
   "license": "ISC",
