--- a/package.json
+++ b/package.json
@@ -36,9 +36,16 @@
     "test": "tests"
   },
   "dependencies": {
+    "@janiscommerce/endpoint-resolver": "^1.0.0",
+    "@janiscommerce/router-fetcher": "^2.0.0",
     "ajv": "^6.10.2",
     "fs-extra": "^8.1.0",
     "lllog": "^1.1.2",
+    "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
+    "lodash.ismatch": "^4.4.0",
+    "lodash.set": "^4.3.2",
+    "lodash.uniqwith": "^4.5.0",
     "mock-fs": "^4.10.1",
     "yamljs": "^0.3.0",
     "yargs": "^13.3.0"
