--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -79,6 +79,10 @@ sections:
       component: MediumText
     - name: rangeLow
       component: Chip
+      componentAttributes:
+        icon: icon_test
+        iconColor: red
+        borderColor: red
     - name: rangeHigh
       component: Chip
     - name: alerts
