add position in mocks

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -11,6 +11,7 @@ sections:
   rootComponent: MainForm
   fieldsGroup:
   - name: detail
+    position: left
     icon: catalogue
     fields:
     - name: name
