--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -44,6 +44,8 @@ sections:
       component: Switch
       validations:
         - - name: required
+    - name: test
+      component: Chip
   - name: others
     fields:
       - name: status
