--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -56,6 +56,8 @@ sections:
         - - name: required
     - name: test
       component: Chip
+    - name: user
+      component: UserChip
   - name: others
     fields:
       - name: status
@@ -96,6 +98,8 @@ sections:
       mapper: addHashtag
     - name: color
       component: Text
+    - name: user
+      component: UserChip
     - name: name
       component: MediumText
     - name: rangeLow
