--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -4,7 +4,12 @@ root: Edit
 source:
   service: sac
   namespace: claim-motive
-  method: edit
+  method: get
+  resolve: false
+target:
+  service: sac
+  namespace: claim-motive
+  method: save
   resolve: false
 sections:
 - name: mainFormSection
