--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -89,6 +89,11 @@ sections:
     namespace: claim-semaphore
     method: browse
     resolve: false
+  staticFilters:
+    - name: status
+      target: path
+      value:
+        dinamic: statusId
   fields:
     - name: id
       component: BoldText
