--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -99,6 +99,15 @@ sections:
       target: path
       value:
         dinamic: statusId
+    - name: status
+      target: query
+      value:
+        static: 1
+    - name: status
+      target: query
+      value:
+        static:
+          id: "string"
   fields:
     - name: id
       component: BoldText
