--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -98,7 +98,7 @@ sections:
     - name: status
       target: path
       value:
-        dinamic: statusId
+        dynamic: statusId
   fields:
     - name: id
       component: BoldText
