--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -32,6 +32,7 @@ sections:
       component: Select
       componentAttributes:
         translateLabels: true
+        labelFieldName: motiveName
         options:
           scope: local
           values:
