add values mapper to local select

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -35,6 +35,9 @@ sections:
         labelFieldName: motiveName
         options:
           scope: local
+          valuesMapper:
+            label: name
+            value: id
           values:
             - label: common.status.active
               value: 1
