add code component validations

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -67,6 +67,12 @@ sections:
       component: Chip
     - name: user
       component: UserChip
+    - name: exampleCode
+      component: Code
+    - name: exampleCodeTwo
+      component: Code
+      componentAttributes:
+        language: json
   - name: others
     fields:
       - name: status
