add collapsible propertie in fieldGroup

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -27,6 +27,7 @@ sections:
   - name: detail
     position: left
     icon: catalogue
+    collapsible: true
     fields:
     - name: name
       component: Select
