--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -196,3 +196,7 @@ sections:
               value: 0
 - name: logsBrowseSection
   rootComponent: LogsBrowseSection
+- name: filesSection
+  rootComponent: FilesSection
+- name: orderItemsSection
+  rootComponent: OrderItemsSection
