--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -162,6 +162,8 @@ sections:
       component: Color
       componentAttributes:
         showCode: true
+    - name: sacClaimChange
+      component: SacClaimChange
 
     - name: alerts
       component: Chip
