add header props in edit new schema

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -11,6 +11,14 @@ target:
   namespace: claim-motive
   method: save
   resolve: false
+header:
+  title:
+    beforeId:
+      - name: test
+        component: BadgeLetter
+    afterId:
+      - name: test
+        component: StatusChip
 sections:
 - name: mainFormSection
   rootComponent: MainForm
