fix compoenent before and after id

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -19,6 +19,8 @@ header:
     afterId:
       - name: test
         component: StatusChip
+        componentAttributes:
+          useTheme: true
 sections:
 - name: mainFormSection
   rootComponent: MainForm
