add position propertie in topComponents

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -33,6 +33,10 @@ sections:
         path: /service/namespace/new
   topComponents:
     - component: TestComponent
+    - component: TestComponentLeft
+      position: left
+    - component: TestComponentRight
+      position: right
   fieldsGroup:
   - name: detail
     position: left
