add labelPrefix in selects

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -50,15 +50,16 @@ sections:
       componentAttributes:
         translateLabels: true
         labelFieldName: motiveName
+        labelPrefix: common.status.
         options:
           scope: local
           valuesMapper:
             label: name
             value: id
           values:
-            - label: common.status.active
+            - label: active
               value: 1
-            - label: common.status.inactive
+            - label: inactive
               value: 0
 
       validations:
