add new properties in select remote edit create

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -131,6 +131,29 @@ sections:
               value: 1
             - label: common.status.inactive
               value: 0
+      - name: selectRemote
+        component: Select
+        validations:
+          - - name: required
+        componentAttributes:
+          translateLabels: true
+          options:
+            scope: remote
+            endpoint:
+              service: sac
+              namespace: claim
+              method: list
+              resolve: false
+            initialValuesEndpoint:
+              service: sac
+              namespace: claim
+              method: list
+              resolve: false
+            initialValuesFilterName: id
+            initialValuesPathParam: name
+            valuesMapper:
+              label: name
+              value: id
       - name: dateTime
         component: DateTimePicker
         componentAttributes:
