add fileGetEndpoint in file section

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -293,6 +293,11 @@ sections:
     namespace: claim
     method: upload
     resolve: false
+  fileGetEndpoint:
+    service: sac
+    namespace: claim
+    method: upload
+    resolve: false
   filesTypes:
     - image/png
 - name: orderItemsSection
