--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -67,7 +67,9 @@ sections:
               field: name
         showWhen:
           - - name: isNotEmpty
-              field: test
+              field:
+                - test
+                - name
             - name: isNotEqualTo
               field: name
               referenceValue: null
@@ -83,8 +85,10 @@ sections:
               field: user1
               referenceValue: 1
           - - name: isNotEqualTo
-              field: user2
-              referenceValue: test
+              field:
+                - test
+                - name
+              referenceValue: true
     - name: appliesToLogistics
       component: Switch
       validations:
