--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -200,6 +200,15 @@ sections:
           translateSectionLabel: true
           translateGroupLabel: false
           translateCheckboxLabel: false
+      - name: multiInputExample
+        component: MultiInput
+        componentAttributes:
+          labelsPrefix: common.test.
+          labelPrefix: common.test.
+          translateLabels: true
+          requiredFields:
+            - test
+            - test2
 
 - name: semaphoreBrowse
   rootComponent: BrowseSection
