--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -16,6 +16,14 @@ header:
         component: StatusChip
         componentAttributes:
           useTheme: true
+themes:
+  themeOne:
+    new: black
+    closed: green
+    _default: grey
+  themeTwo:
+    new: grey
+    closed: fizzgreen
 sections:
 - name: mainFormSection
   rootComponent: MainForm
