add statusChip theme string

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -16,6 +16,10 @@ header:
         component: StatusChip
         componentAttributes:
           useTheme: true
+      - name: test2
+        component: StatusChip
+        componentAttributes:
+          useTheme: themeOne
 themes:
   themeOne:
     new: black
