--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -14,6 +14,7 @@ header:
     afterId:
       - name: test
         component: StatusChip
+        mapper: translate
         componentAttributes:
           useTheme: true
 sections:
