remove required fields in orderItemsSection

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -369,6 +369,10 @@ sections:
       value:
         static:
           id: "string"
+
+- name: anotherOrderItemsSection
+  rootComponent: OrderItemsSection
+
 - name: apiKeysSection
   rootComponent: ApiKeysSection
   parentIdField: user
