--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -137,6 +137,15 @@ sections:
     - name: asyncData
       component: AsyncWrapper
       componentAttributes:
+        staticFilters:
+        - name: status
+          target: path
+          value:
+            dynamic: id
+        - name: status
+          target: query
+          value:
+            static: 1
         source:
           service: id
           namespace: user
