Post publish script to notify about new versions

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test-ci": "nyc --reporter=html --reporter=text mocha --recursive tests/",
     "watch-test": "export TEST_ENV=true; mocha --exit -R nyan -w --recursive tests/",
     "coverage": "nyc npm test",
-    "lint": "eslint index.js lib/ tests/"
+    "lint": "eslint index.js lib/ tests/",
+    "postpublish": "./.postpublish.sh"
   },
   "repository": {
     "type": "git",
