add triggers for edit/create fields

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -164,6 +164,35 @@ sections:
         translateLabels: true
         label: test.test.test
         labelField: asdasd
+
+    - name: fieldTriggers
+      component: Input
+      triggers:
+        - endpoint:
+            service: sac
+            namespace: claim
+            method: list
+            resolve: false
+          endpointParameters:
+            - name: status
+              target: path
+              value:
+                dynamic: id
+            - name: status
+              target: query
+              value:
+                static: 1
+          dataMapping:
+            name: firstname
+          triggerOnLoad: true
+        - endpoint:
+            service: sac
+            namespace: claim
+            method: list
+            resolve: false
+          dataMapping:
+            name: firstname
+
     - name: fieldsArray
       component: FieldsArray
       componentAttributes:
