add html component shema y edit/create

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -230,6 +230,14 @@ sections:
           - name: test
             component: Text
 
+    - name: template
+      component: HTML
+      componentAttributes:
+        sourceField: '<div>hello world</div>'
+
+    - name: emptyTemplate
+      component: HTML
+
   - name: others
     fields:
       - name: status
