add referenceValueType in conditions

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -90,6 +90,7 @@ sections:
                 - name
             - name: isNotEqualTo
               field: name
+              referenceValueType: static
               referenceValue: null
     - name: description
       component: Textarea
@@ -101,7 +102,8 @@ sections:
         showWhen:
           - - name: isEqualTo
               field: user1
-              referenceValue: 1
+              referenceValueType: dynamic
+              referenceValue: name
             - name: isNotOneOf
               field: someField
               referenceValue:
