Map fieldsMapping componentAttribute is now optional

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -197,6 +197,9 @@ sections:
           latitude: latitude
           longitude: longitude
 
+    - name: exampleMapThree
+      component: Map
+
     - name: asyncData
       component: AsyncWrapper
       componentAttributes:
