add new props for selects

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -295,6 +295,7 @@ sections:
           - - name: required
         componentAttributes:
           translateLabels: true
+          canClear: true
           options:
             scope: local
             values:
