add new prop for apiKeySection

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -547,6 +547,7 @@ sections:
 - name: apiKeysSection
   rootComponent: ApiKeysSection
   parentIdField: user
+  idField: apiKey
   source:
     service: id
     namespace: user
