add action with callback in top sections

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -52,6 +52,7 @@ sections:
           icon: star_light
           color: fizzGreen
           type: endpoint
+          callback: reloadSectionData
           options:
             endpoint:
               service: sac
@@ -65,6 +66,7 @@ sections:
           icon: star_light
           color: fizzGreen
           type: endpoint
+          callback: refresh
           options:
             endpoint:
               service: sac
