--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -126,6 +126,7 @@ sections:
               referenceValue:
                 - test1
                 - test2
+            - name: isDev
         showWhen:
           - - name: isNotEmpty
               field:
