--- a/tests/mocks/schemas/new.yml
+++ b/tests/mocks/schemas/new.yml
@@ -5,6 +5,8 @@ target:
   service: sac
   namespace: claim-motive
   method: save
+saveRedirectUrl: /some-path
+cancelRedirectUrl: /some-path
 sections:
 - name: mainFormSection
   rootComponent: MainForm
