--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -555,6 +555,37 @@ sections:
     resolve: false
   filesTypes:
     - image/png
+- name: imageFilesSection
+  rootComponent: ImageFilesSection
+  fileUploadEndpoint:
+    service: sac
+    namespace: claim
+    method: upload
+    resolve: false
+  fileRelationEndpoint:
+    service: sac
+    namespace: claim
+    method: upload
+    resolve: false
+  fileListEndpoint:
+    service: sac
+    namespace: claim
+    method: upload
+    resolve: false
+  fileDeleteEndpoint:
+    service: sac
+    namespace: claim
+    method: upload
+    resolve: false
+  fileGetEndpoint:
+    service: sac
+    namespace: claim
+    method: upload
+    resolve: false
+  filesTypes:
+    - image/png
+    - image/jpg
+    - image/gif
 - name: orderItemsSection
   rootComponent: OrderItemsSection
   sourceField: items
