--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -431,6 +431,7 @@ sections:
 
 - name: semaphoreBrowse
   rootComponent: BrowseSection
+  canRefresh: true
   topComponents:
     - component: TestComponent
       attributes:
