--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -445,6 +445,9 @@ sections:
     namespace: claim-semaphore
     method: browse
     resolve: false
+  appearance:
+    desktop:
+      rowMinHeight: 70
   staticFilters:
     - name: status
       target: path
