add new props in badgeletter schema

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -14,6 +14,9 @@ header:
     beforeId:
       - name: test
         component: BadgeLetter
+        componentAttributes:
+          backgroundColorTheme: backgroundThemeName
+          fontColorTheme: colorThemeName
     afterId:
       - name: test
         component: StatusChip
