more appearance props

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -446,8 +446,13 @@ sections:
     method: browse
     resolve: false
   appearance:
+    default:
+      rowMinHeight: 50
     desktop:
       rowMinHeight: 70
+      rowVerticalAlign: middle
+    mobile:
+      rowMinHeight: 100
   staticFilters:
     - name: status
       target: path
