--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -489,6 +489,11 @@ sections:
     namespace: claim-semaphore
     method: browse
     resolve: false
+  sortEndpoint:
+    service: service
+    namespace: namespace
+    method: method
+    resolve: false
   appearance:
     default:
       rowMinHeight: 50
