--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -607,6 +607,7 @@ sections:
     resolve: false
   filesTypes:
     - image/png
+
 - name: imageFilesSection
   rootComponent: ImageFilesSection
   fileUploadEndpoint:
@@ -634,10 +635,25 @@ sections:
     namespace: claim
     method: upload
     resolve: false
+  fileUpdateEndpoint:
+    service: sac
+    namespace: claim
+    method: update
+    resolve: false
+  fileUpdateEndpointParameters:
+    - name: status
+      target: path
+      value:
+        dynamic: statusId
+    - name: status
+      target: query
+      value:
+        static: 1
   filesTypes:
     - image/png
     - image/jpg
     - image/gif
+
 - name: orderItemsSection
   rootComponent: OrderItemsSection
   sourceField: items
