add conditions in sections

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -475,6 +475,10 @@ sections:
 - name: semaphoreBrowse
   rootComponent: BrowseSection
   canRefresh: true
+  conditions:
+    showWhen:
+      - - name: isNotEmpty
+          field: order
   topComponents:
     - component: TestComponent
       attributes:
