add conditions in actions top components

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -80,6 +80,10 @@ sections:
           color: fizzGreen
           type: endpoint
           callback: refresh
+          conditions:
+            showWhen:
+              - - name: isNotEmpty
+                  field: order
           options:
             endpoint:
               service: sac
