add fielSortEndpoint in files sections

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -640,6 +640,11 @@ sections:
     namespace: claim
     method: upload
     resolve: false
+  fileSortEndpoint:
+    service: sac
+    namespace: claim
+    method: sort
+    resolve: false
   filesTypes:
     - image/png
 
@@ -669,6 +674,11 @@ sections:
     service: sac
     namespace: claim
     method: upload
+    resolve: false
+  fileSortEndpoint:
+    service: sac
+    namespace: claim
+    method: sort
     resolve: false
   fileUpdateEndpoint:
     service: sac
