add omsOrderInfo in edit section

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -611,6 +611,8 @@ sections:
               value: 1
             - label: common.status.inactive
               value: 0
+- name: order
+  rootComponent: OmsOrderInfo
 - name: logsBrowseSection
   rootComponent: LogsBrowseSection
 - name: filesSection
