Added icon property to create/edit sections

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -47,6 +47,7 @@ collapseSections: true
 sections:
 - name: mainFormSection
   rootComponent: MainForm
+  icon: catalogue
   topComponents:
     - component: TestComponent
     - component: TestComponentLeft
