--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -183,7 +183,16 @@ sections:
       mapper:
         name: suffix
         props:
-         value: .test
+          value: .test
+          translate: true
+
+    - name: exampleTextPrefix
+      component: Text
+      mapper:
+        name: prefix
+        props:
+          value: .test
+          translate: false
 
     - name: exampleStatuChipOne
       component: StatusChip
