add chips with themes in example mocks

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -219,11 +219,22 @@ sections:
       validations:
         - - name: required
 
-    - name: test
+    - name: testChip
       component: Chip
       componentAttributes:
         icon: icon_test
         iconColor: red
+        borderColor: red
+        textColor: grey
+        backgroundColor: grey
+
+    - name: testChipWithThemes
+      component: Chip
+      componentAttributes:
+        icon:
+          useTheme: themeName
+        iconColor:
+          useTheme: themeName
         borderColor: red
         textColor: grey
         backgroundColor: grey
