add endpointparameters in FormSections

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -772,6 +772,21 @@ sections:
     namespace: claim-motive
     method: save
     resolve: false
+  sourceEndpointParameters:
+    - name: service
+      target: path
+      value:
+        static: serviceName
+  targetEndpointParameters:
+    - name: status
+      target: path
+      value:
+        dynamic: id
+    - name: status
+      target: query
+      value:
+        static: 1
+
   fieldsGroup:
   - name: detail
     position: left
