add currency mapper and examples in mocks

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -178,6 +178,14 @@ sections:
                 - name
               referenceValue: true
 
+    - name: exampleTextCurrency
+      component: Text
+      mapper:
+        name: currency
+        props:
+          currencyCode: USD
+          currencyField: someField
+
     - name: exampleTextSuffix
       component: Text
       mapper:
