add new prop for userSelector

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -550,6 +550,8 @@ sections:
         component: UserSelector
         componentAttributes:
           isMulti: true
+          onlyActiveUsers: true
+
 
 
 - name: semaphoreBrowse
