add dateTimepicker new props

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -517,6 +517,15 @@ sections:
           selectDate: false
           selectTime: true
           selectRange: true
+
+      - name: otherDateTime
+        component: DateTimePicker
+        componentAttributes:
+          selectDate: true
+          selectRange: true
+          setStartOfDay: true
+          setEndOfDay: true
+
       - name: checklist
         component: CheckList
         componentAttributes:
