add type hidden in inputs edit/create

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -373,6 +373,11 @@ sections:
       componentAttributes:
         icon: iconName
 
+    - name: someInputHidden
+      component: Input
+      componentAttributes:
+        type: hidden
+
     - name: fieldsArray
       component: FieldsArray
       componentAttributes:
