add new props for action form

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -125,6 +125,10 @@ sections:
 
     - component: ActionForm
       name: someForm
+      icon: iconName
+      iconColor: colorName
+      color: colorName
+      backgroundColor: colorName
       conditions:
         showWhen:
           - - name: isNotEmpty
