add more explaes for test

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -259,6 +259,13 @@ sections:
     - name: exampleImage
       component: Image
 
+    - name: exampleImageWithProps
+      component: Image
+      componentAttributes:
+        roundBorders: 50
+        width: 50
+        height: 50
+
     - name: exampleUserImage
       component: UserImage
       componentAttributes:
