add oms order history

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1003,3 +1003,19 @@ sections:
           component: Text
         - name: user
           component: UserChip
+
+- name: orderHistory
+  rootComponent: OmsOrderHistory
+  milestones:
+    oneSomeMilestone:
+      component: SomeComponent
+      fields:
+        - component: Text
+          name: someName
+    twoSomeMilestone:
+      component: SomeComponent
+      fields:
+        - component: Text
+          name: someName
+    threeSomeMilestone:
+      component: SomeComponent
