add new prop for oms history section

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -1012,10 +1012,21 @@ sections:
       fields:
         - component: Text
           name: someName
+        - component: Link
+          name: someNameLink
+          noLabel: true
+          mapper:
+            name: suffix
+            props:
+              value: /path/
+          componentAttributes:
+            label: common.action.viewMore
+            translateLabels: true
+
     twoSomeMilestone:
       component: SomeComponent
       fields:
         - component: Text
           name: someName
     threeSomeMilestone:
-      component: SomeComponent
+      component: SomeComponentTwo
