add github actions

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "export TEST_ENV=true; mocha --timeout 4000 --exit -R nyan --require tests/bootstrap.js --recursive tests/",
-    "test-ci": "nyc --reporter=html --reporter=text mocha --recursive tests/",
+    "test-ci": "nyc --reporter=lcov --reporter=text-summary mocha --exit --recursive tests/",
     "watch-test": "export TEST_ENV=true; mocha --timeout 4000 --exit -R nyan -w --recursive tests/",
     "coverage": "nyc npm test",
     "lint": "eslint index.js lib/ tests/",
