add preview component

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -686,7 +686,15 @@ sections:
             method: method
             resolve: false
 
-
+      - name: someFieldPreview
+        component: Preview
+        componentAttributes:
+          image: fieldTitle
+          title: fieldTitle
+          subtitle: fieldSubtitle
+          description: fieldDescription
+          price: fieldPrice
+          listPrice: fieldPrice
 
 - name: semaphoreBrowse
   rootComponent: BrowseSection
