--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -675,6 +675,9 @@ sections:
       - name: userAssigned
         component: UserSelector
 
+      - name: fieldIconSelector
+        component: IconSelector
+
       - name: members
         component: UserSelector
         componentAttributes:
