--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -61,6 +61,10 @@ themes:
   themeTwo:
     new: grey
     closed: fizzgreen
+    warning:
+      somePropOne: someValue
+      somePropTwo: someValue
+
 
 collapseSections: true
 
