add props for useTheme in components

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -352,6 +352,7 @@ sections:
         borderColor: red
         textColor: grey
         backgroundColor: grey
+        useTheme: themeName
 
     - name: testMediumChip
       component: MediumChip
