add new prop for link component path

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -471,6 +471,11 @@ sections:
     - name: linkTest3
       component: Link
       componentAttributes:
+        path: /some/path/{id}
+
+    - name: linkTest4
+      component: Link
+      componentAttributes:
         urlTarget:
           service: service
           namespace: namespace
