--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -412,6 +412,17 @@ sections:
         language: json
         canEdit: true
 
+    - name: exampleCodeThree
+      component: Code
+      componentAttributes:
+        width: 300
+        height: 350
+
+    - name: exampleCodeFour
+      component: Code
+      componentAttributes:
+        height: full
+
     - name: exampleMap
       component: Map
       componentAttributes:
