--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -333,6 +333,26 @@ sections:
       componentAttributes:
         colorSource: test
 
+    - name: exampleStatuChipFour
+      component: StatusChip
+      componentAttributes:
+        useTheme: themeOne
+        themeConditionals:
+          warning:
+            - - name: lowerThan
+                field: quantity
+                referenceValue: 10
+              - name: lowerOrEqual
+                field: quantity
+                referenceValue: 10
+          error:
+            - - name: greaterThan
+                field: quantity
+                referenceValue: 10
+              - name: greaterOrEqual
+                field: quantity
+                referenceValue: 10
+
     - name: appliesToLogistics
       component: Switch
       defaultValue: true
@@ -373,6 +393,27 @@ sections:
         textColor: grey
         backgroundColor: grey
         useTheme: themeName
+
+    - name: testChipWithThemesConditionals
+      component: Chip
+      componentAttributes:
+        borderColor: grey
+        useTheme: themeName
+        themeConditionals:
+          warning:
+            - - name: lowerThan
+                field: quantity
+                referenceValue: 10
+              - name: lowerOrEqual
+                field: quantity
+                referenceValue: 10
+          error:
+            - - name: greaterThan
+                field: quantity
+                referenceValue: 10
+              - name: greaterOrEqual
+                field: quantity
+                referenceValue: 10
 
     - name: testMediumChip
       component: MediumChip
