add examples for code component

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -423,6 +423,16 @@ sections:
       componentAttributes:
         height: full
 
+    - name: exampleCodeFive
+      component: Code
+      componentAttributes:
+        height: medium
+
+    - name: exampleCodeSix
+      component: Code
+      componentAttributes:
+        height: large
+
     - name: exampleMap
       component: Map
       componentAttributes:
