--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -832,10 +832,12 @@ sections:
 - name: semaphoreBrowse
   rootComponent: BrowseSection
   canRefresh: true
+
   conditions:
     showWhen:
       - - name: isNotEmpty
           field: order
+
   topComponents:
     - component: TestComponent
       attributes:
@@ -850,11 +852,15 @@ sections:
     namespace: claim-semaphore
     method: browse
     resolve: false
+
   sortEndpoint:
     service: service
     namespace: namespace
     method: method
     resolve: false
+
+  fieldSortEndpoint: id
+
   appearance:
     default:
       rowMinHeight: 50
