change conditions names

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -342,14 +342,14 @@ sections:
             - - name: lowerThan
                 field: quantity
                 referenceValue: 10
-              - name: lowerOrEqual
+              - name: lowerOrEqualThan
                 field: quantity
                 referenceValue: 10
           error:
             - - name: greaterThan
                 field: quantity
                 referenceValue: 10
-              - name: greaterOrEqual
+              - name: greaterOrEqualThan
                 field: quantity
                 referenceValue: 10
 
@@ -404,14 +404,14 @@ sections:
             - - name: lowerThan
                 field: quantity
                 referenceValue: 10
-              - name: lowerOrEqual
+              - name: lowerOrEqualThan
                 field: quantity
                 referenceValue: 10
           error:
             - - name: greaterThan
                 field: quantity
                 referenceValue: 10
-              - name: greaterOrEqual
+              - name: greaterOrEqualThan
                 field: quantity
                 referenceValue: 10
 
