add badgeletter useTheme prop

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -47,6 +47,7 @@ header:
         componentAttributes:
           backgroundColorTheme: backgroundThemeName
           fontColorTheme: colorThemeName
+          useTheme: someTheme
       - name: title
         component: CustomTitle
         componentAttributes:
