--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -455,27 +455,6 @@ sections:
         language: json
         canEdit: true
 
-    - name: exampleCodeThree
-      component: Code
-      componentAttributes:
-        width: 300
-        height: 350
-
-    - name: exampleCodeFour
-      component: Code
-      componentAttributes:
-        height: full
-
-    - name: exampleCodeFive
-      component: Code
-      componentAttributes:
-        height: medium
-
-    - name: exampleCodeSix
-      component: Code
-      componentAttributes:
-        height: large
-
     - name: exampleMap
       component: Map
       componentAttributes:
@@ -630,13 +609,34 @@ sections:
           - name: test
             component: Text
 
-    - name: template
+    - name: exampleHTMLOne
       component: HTML
       componentAttributes:
         sourceField: template
 
-    - name: emptyTemplate
+    - name: exampleHTMLTwo
       component: HTML
+
+    - name: exampleHTMLThree
+      component: HTML
+      componentAttributes:
+        width: 300
+        height: 350
+
+    - name: exampleHTMLFour
+      component: HTML
+      componentAttributes:
+        height: full
+
+    - name: exampleHTMLFive
+      component: HTML
+      componentAttributes:
+        height: medium
+
+    - name: exampleHTMLSix
+      component: HTML
+      componentAttributes:
+        height: large
 
   - name: others
     fields:
