add preload options select prop

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -662,6 +662,7 @@ sections:
           - - name: required
         componentAttributes:
           translateLabels: true
+          preloadOptions: true
           options:
             scope: remote
             endpoint:
