add new prop for dateTimePicker

--- a/tests/mocks/schemas/edit.yml
+++ b/tests/mocks/schemas/edit.yml
@@ -755,6 +755,7 @@ sections:
           selectDate: false
           selectTime: true
           selectRange: true
+          format: hh:mm
 
       - name: otherDateTime
         component: DateTimePicker
